Extract CourseDataService, use only UpdateCourseDataJob